--- a/.github/workflows/semantic-release-caller.yml
+++ b/.github/workflows/semantic-release-caller.yml
@@ -5,6 +5,6 @@ on:
 jobs:
   call_semantic_release:
     uses: datajoint/.github/.github/workflows/semantic-release.yaml@main
-    with:
+    secrets:
       APP_ID: ${{ secrets.APP_ID }}
       GET_TOKEN_KEY: ${{ secrets.ELEMENT_GET_TOKEN_KEY }}
